Closed
Bug 523224
Opened 16 years ago
Closed 16 years ago
[e10s] nsFrameLoader::TryNewProcess crashes because reflow hasn't happened yet
Categories
(Core :: IPC, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: benjamin, Assigned: benjamin)
References
Details
There is no primary frame, things crash in weirdly spectacular ways.
<bz> I was going to make this code robust to that
<bz> by making it possible to start up a new process without having the widgetry yet
<bz> And then hooking up the widgets as needed
<bsmedberg> ok
I'm not sure whether it's possible to go ahead and create the docshell and start doing actual loading on the child side unless there's a widget; technical the content *process* already exists (it's a singleton), it's the PIFrameEmbeddingParent which currently requires a widget.
Taking for now, since bz is still busy with reviews and such.
| Assignee | ||
Comment 1•16 years ago
|
||
jdm, this is related to the asynchronous launching in bug 517963, or at least might cause painful merge conflicts.
Comment 2•16 years ago
|
||
We need to make the loading without a widget work, imo; it works now (without e10s) and people rely on it.
| Assignee | ||
Comment 3•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Version: unspecified → Other Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•